--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,7 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand" href="#"><img src="img/logo.png" alt="ConsultPM"></a>
+								<a class="navbar-brand" href="http://consultpm.com"><img src="img/logo.png" alt="ConsultPM"></a>
 							</div>
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav scrollnav">
@@ -42,7 +42,7 @@
 									<li><a href="#testimonials">Отзывы</a></li>
 									<li><a href="#study">Обучение</a></li>
 									<li><a href="#guarantee">Гарантия</a></li>
-									<li><a href="#buy">Купить</a></li>
+									<li><a href="#buy">Цена</a></li>
 								</ul>
 							</div><!-- /.navbar-collapse -->
 						</div><!-- /.container -->
@@ -70,12 +70,12 @@
                                     <div class="col-md-12 inside">
                                         <p>В программе:</p>
                                         <ul>
-                                            <li>Полноценный курс менеджмента, около 200 часов, 13 модулей</li>
+                                            <li>Полноценный курс менеджмента: около 200 часов, 13 модулей</li>
                                             <li>3 области знаний – Software Development Life Cycle, Management Hard Skills, Management Soft Skills</li>
                                             <li>Только работающие практики, прошедшие проверку в ведущих международных IT-компаниях</li>
                                             <li>Обучение через практику с элементами MBA-подходов</li>
                                             <li>На рынке отсутствуют аналоги подобной программы</li>
-                                            <li>Лучшим ученикам будут даны рекомендации в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
+                                            <li>Рекомендации на собеседование в IT-компании для лучших студентов (есть договоренность с IT-компаниями)</li>
                                         </ul>
                                         <p>Закончив обучение, Вы сможете управлять проектами в IT-разработке.</p>
                                     </div>
@@ -85,7 +85,7 @@
 						<div class="row">
                             <div class="col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a></div>
 							<div class="col-md-offset-1 col-sm-7">
-								<p>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</p>
+								<p>Регистрация закрывается 15 января в 23:59 Kyiv Time Zone (+2 UTC)</p>
                                 <div class="timer">
                                     <p class="time"></p>
                                     <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
@@ -98,7 +98,7 @@
 				<section class="details-container">
 					<div class="container">
 						<div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="details">Выбери программу обучения</h2>
                             </div>
 						</div><!-- /.row -->
@@ -134,7 +134,7 @@
 									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 								<div class="form-description">
-									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. По завершению обучения желательно закрепить свои знания в течение не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IPMA, Prince2 и т.п.</p>
+									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. После обучения желательно закрепить свои знания в течение не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IPMA, Prince2 и т.п.</p>
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
@@ -321,12 +321,12 @@
 				<section class="bonuses-container">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="bonuses">Плюсы и выгоды для участника</h2>
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-3 images">
+                            <div class="col-sm-3 images hidden-xs">
                                 <i class="icon"></i>
                                 <i class="icon"></i>
                                 <i class="icon"></i>
@@ -336,7 +336,7 @@
                                 <i class="icon"></i>
                                 <i class="icon"></i>
                             </div>
-                            <div class="col-md-9">
+                            <div class="col-sm-9 col-xs-12">
                                 <ul>
                                     <li>Все необходимые знания и навыки в области управления проектами в IT-разработке собраны в одной цельной программе</li>
                                     <li>Огромное количество практики наряду с работающей и проверенной теорией</li>
@@ -348,7 +348,7 @@
                                     <li>Обязательный разбор домашних заданий</li>
                                     <li>Последовательность тем организована таким образом, что обучение происходит от простого к сложному, затрагивая все три сектора знаний одновременно (SDLC, Hard Skills и Soft Skills)</li>
                                     <li>Регулярная персональная обратная связь от преподавателя</li>
-                                    <li>Лучшим ученикам будут даны рекомендации в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
+                                    <li>Рекомендации на собеседование в IT-компании для лучших студентов (есть договоренность с IT-компаниями)</li>
                                 </ul>
                             </div>
                         </div><!-- /.row -->
@@ -358,15 +358,15 @@
 				<section class="coach-container">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="coach">Автор программы и тренер</h2>
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-xs-9">
-                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года ровел более 600 часов тренингов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
+							<div class="col-xs-12 col-sm-3 photo-coach"><img src="img/coach.jpg" alt="Coach" class="img-responsive" /></div>
+                            <div class="col-xs-12 col-sm-9">
+                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года провел более 600 часов тренингов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
                             </div>
-                            <div class="col-xs-3 photo-coach"><img src="img/coach.jpg" alt="Coach" class="img-responsive" /></div>
                         </div><!-- /.row -->
 					</div>
 				</section>
@@ -374,7 +374,7 @@
 				<section class="testimonials-container">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="testimonials">Отзывы слушателей</h2>
                             </div>
                         </div><!-- /.row -->
@@ -403,18 +403,18 @@
 				<section class="study-container">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="study">Как будет проходить обучение</h2>
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
                             <div class="col-md-6">
-                                <p>Обучение будет проходить очно в MBA-стиле:</p>
-								<ul>
+                                <p>Обучение будет проходить <strong>очно</strong> в MBA-стиле:</p>
+				<ul>
                                     <li>выдается материал на самостоятельное изучение перед занятием</li>
                                     <li>изученный материал обсуждается в группе</li>
                                     <li>на занятии материал закрепляется практикой и упражнениями</li>
-                                    <li>выдается домашнее задание на дальнейшее закрепление материала</li>
+                                    <li>выдается домашнее задание для дальнейшего закрепления материала</li>
                                     <li>результат домашнего задания разбирается на следующем занятии</li>
                                 </ul>
                             </div>
@@ -435,13 +435,13 @@
 				<section class="guarantee-container">
 					<div class="container">
                         <div class="row">
-							<div class="col-md-12">
+							<div class="col-md-8 col-md-offset-2 col-xs-12">
 								<h2 id="guarantee">Гарантия</h2>
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-3"><img src="img/warranty.png" alt="Гарантия" class="img-responsive"></div>
-                            <div class="col-md-9">
+                            <div class="col-md-3 hidden-xs"><img src="img/warranty.png" alt="Гарантия" class="img-responsive"></div>
+                            <div class="col-md-9 col-xs-12">
 								<p>Предоставляется гарантия возврата 100% внесенных денег. Если Вас по какой-либо причине не устроят занятия/материалы/упражнения – Вы получите все внесенные деньги назад. Этим правом можно будет воспользоваться только в течение первого занятия. В то же время, воспользовавшись им, Вы потеряете возможность участия в любых будущих программах, событиях, курсах и мероприятиях от consultpm.com</p>
 							</div>
                         </div><!-- /.row -->
@@ -451,7 +451,7 @@
 				<section class="buy-container">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-8 col-md-offset-2 col-xs-12">
                                 <h2 id="buy">Начало программы, длительность и стоимость</h2>
                             </div>
                         </div><!-- /.row -->
@@ -463,7 +463,7 @@
 								</div>
 								<ul>
 									<li>208 часов</li>
-									<li>13 недель (4 месяца)</li>
+									<li>13 модулей/недель (~4 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1390</li>
 								</ul>
 								<div class="button">
@@ -477,7 +477,7 @@
 								</div>
 								<ul>
 									<li>168 часов</li>
-									<li>11 недель (3 месяца)</li>
+									<li>11 модулей/недель (~3 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1890</li>
 								</ul>
 								<div class="button">
@@ -491,7 +491,7 @@
 								</div>
 								<ul>
 									<li>96 часов</li>
-									<li>6 недель (2 месяца)</li>
+									<li>6 модулей/недель (~2 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1990</li>
 								</ul>
 								<div class="button">
@@ -501,9 +501,10 @@
 						</div><!-- /.row -->
                         <div class="row">
                             <div class="col-md-6">
+                                <p>Начало обучения: <strong>29 января 2016</strong> (пятница)</p>
                                 <p>Оплату возможно разбить на <strong>3 платежа:</strong></p>
                                 <ol>
-                                    <li><strong>40%</strong> До начала обучения</li>
+                                    <li><strong>40%</strong> до начала обучения</li>
                                     <li><strong>30%</strong> через 1 месяц после начала обучения</li>
                                     <li><strong>30%</strong> еще через 1 месяц</li>
                                 </ol>
@@ -541,7 +542,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <script type="text/javascript">var submitted=false;</script>
-                                        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
+                                        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016-ok/';}"></iframe>
                                         <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" class="reg-form">
                                             <div class="form-group">
                                                 <p>Какую программу обучения Вы выбираете? *</p>
@@ -568,7 +569,7 @@
                             <div class="col-md-6 hidden-xs registration">
                                 <h4>Записаться</h4>
                                 <script type="text/javascript">var submitted=false;</script>
-                                <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
+                                <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016-ok/';}"></iframe>
                                 <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;" class="reg-form">
                                     <div class="form-group">
                                         <p>Какую программу обучения Вы выбираете? *</p>
@@ -657,5 +658,31 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.countdownTimer.min.js"></script>
         <script src="js/scripts.js"></script>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+(function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+        try {
+            w.yaCounter21000805 = new Ya.Metrika({id:21000805,
+                    webvisor:true});
+        } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="//mc.yandex.ru/watch/21000805" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
 	</body>
 </html>
